--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -4790,3 +4790,344 @@ click.suning.cn
 .thelifeisbinary.netlify.com
 .tongdun.net
 .zeus-nevo.pages.dev
+.1.wps.cn
+.2016.sina.cn
+.2052.flash2-http.qq.com
+.3rd.t.sohu.com
+.a.hl.mi.com
+.a.tanx.com
+.activeqq.3g.qq.com
+.adcore.lenovomm.com
+.addata.ku6.com
+.adx-static.ksosoft.com
+.adx.tanx.com
+.aecpm.alicdn.com
+.afpmm.alicdn.com
+.agoodm.m.taobao.com
+.ai.taobao.com
+.alissl.ucdl.pp.uc.cn
+.aliunion.cn.yahoo.com
+.analytics.hz.netease.com
+.analytics.spotify.com
+.analytics.ws.126.net
+.android-lrcresource.wps.cn
+.android.push.126.net
+.api.apps.sina.cn
+.api.jr.mi.com
+.api.open.uc.cn
+.api.shuaji.360.cn
+.api.waptest.taobao.com
+.api.youqian.baidu.com
+.bazinga.mse.sogou.com
+.bdsp.x.jd.com
+.beacon.gtimg.com
+.bobo.163.com
+.boscdn.bpc.baidu.com
+.bugreportv2.qq.com
+.calopenupdate.comm.miui.com
+.ccclub.cmbchina.com
+.cdn-ads.oss-cn-shanghai.aliyuncs.com
+.cdn.ark.qq.com
+.cdn.tanx.com
+.cgi.connect.qq.com
+.choice.microsoft.com
+.cjroq.bealge.sogou.com
+.click.aliyun.com
+.click.mz.simba.taobao.com
+.click.simba.taobao.com
+.click.tanx.com
+.click.tz.simba.taobao.com
+.click.uve.mobile.sina.cn
+.click.uve.weibo.com
+.client.show.qq.com
+.cm.bilibili.com
+.cm.jd.com
+.cm.p4p.cn.yahoo.com
+.cmc.tanx.com
+.cms.opendsp.tanx.com
+.cms.tanx.com
+.cnzz.mmstat.com
+.config.push.sogou.com
+.contentrecommend-out.mobile.sina.cn
+.corp.sohu.com
+.count.mail.163.com
+.count.video.sina.com.cn
+.counter.ksosoft.com
+.cpc.sohu.com
+.cre-dp.sina.cn
+.cre.mix.sina.com.cn
+.crl.microsoft.com
+.crm-eve.b2b.alibaba-inc.com
+.d0.sina.com.cn
+.d0.sinaimg.cn
+.d00.sina.com.cn
+.d1.sina.com.cn
+.d1.sinaimg.cn
+.d1grtyyel8f1mh.cloudfront.net
+.d2.sina.com.cn
+.d2.sinaimg.cn
+.d3.sina.com.cn
+.d3.sinaimg.cn
+.d31qbv1cthcecs.cloudfront.net
+.d36eyd5j1kt1m6.cloudfront.net
+.d3g.qq.com
+.d3v1lb83psg9di.cloudfront.net
+.d4.sina.com.cn
+.d4.sinaimg.cn
+.d5.sina.com.cn
+.d5.sinaimg.cn
+.d5nxst8fruw4z.cloudfront.net
+.d6.sina.com.cn
+.d6.sinaimg.cn
+.d7.sina.com.cn
+.d7.sinaimg.cn
+.d8.sina.com.cn
+.d8.sinaimg.cn
+.d9.sina.com.cn
+.d9.sinaimg.cn
+.das.api.youku.com
+.das.mobile.youku.com
+.data.haoma.sogou.com
+.dc.csdn.net
+.dcads.sina.com.cn
+.dir.minigame.qq.com
+.discuz.gtimg.cn
+.dl.kjava.sina.cn
+.dl.wan.sogoucdn.com
+.dmp.sina.cn
+.download.sj.qq.com
+.download.zhushou.sogou.com
+.dp.im.weibo.cn
+.dressimage.img-cn-beijing.aliyuncs.com
+.dsp.simba.taobao.com
+.dualstack.adsame-1421766300.ap-southeast-1.elb.amazonaws.com
+.dw-collect.ksosoft.com
+.e-p4p.163.com
+.ecpm.tanx.com
+.ef-dongfeng.tanx.com
+.ef.opendsp.tanx.com
+.ef.tanx.com
+.et.tanx.com
+.etg.qq.com
+.event.ksosoft.com
+.ex.qq.com
+.ex.tanx.com
+.fa.163.com
+.fm.qzone.qq.com
+.fs-uc-nearme-com-cn.oss-cn-hangzhou.aliyuncs.com
+.fusion.qq.com
+.g.163.com
+.g1.163.com
+.game.html5.qq.com
+.game.weibo.cn
+.game.weibo.com
+.gen.alicdn.com
+.go.mmstat.com
+.gxb.mmstat.com
+.h.msn.com
+.h5.mse.360.cn
+.haiwai-ic.ksosoft.com
+.hao.uc.cn
+.hk.napi.ucweb.com
+.ht.www.sogou.com
+.huodong.pl.youku.com
+.huodong.vip.youku.com
+.hz.mmstat.com
+.i1.services.social.microsoft.com
+.iacc.qq.com
+.idm.bce.baidu.com
+.ieonline.microsoft.com
+.if.mingxing.qq.com
+.ifs.tanx.com
+.image.box.xiaomi.com
+.image.p4p.sogou.com
+.image.zzd.sm.cn
+.img-dsp.oss-cn-beijing.aliyuncs.com
+.img.shouji.sogou.com
+.img1.gtimg.com
+.img1.pcfg.cache.wps.cn
+.img1.sj.qq.com
+.info.3g.qq.com
+.info.analysis.kp.sec.miui.com
+.info.sec.miui.com
+.input.shouji.sogou.com
+.int.dpool.sina.com.cn
+.interest.mix.sina.com.cn
+.ip.taobao.com
+.ir.mail.163.com
+.irpmt.mail.163.com
+.j.wit.qq.com
+.jiayi1.oss-cn-shanghai.aliyuncs.com
+.jqmt.qq.com
+.jsadsdisplay.cn-beijing.log.aliyuncs.com
+.jsqmt.qq.com
+.kwurl.ucweb.com
+.lb.gtimg.com
+.log.waimai.baidu.com
+.loli.net
+.lxcdn.dl.files.xiaomi.net
+.m.qpic.cn
+.mapp.qzone.qq.com
+.match.p4p.1688.com
+.mazu.3g.qq.com
+.mclick.simba.taobao.com
+.medal.blog.csdn.net
+.mg.games.sina.com.cn
+.migrate.driveapi.micloud.xiaomi.net
+.mini2015.qq.com
+.mis.g.mi.com
+.mivideo.g.mi.com
+.mlog.search.xiaomi.net
+.mobaders.oss-cn-beijing.aliyuncs.com
+.mostat.wps.cn
+.moupdate10332052.wps.cn
+.mqqad.cs0309.html5.qq.com
+.mqqadr.reader.qq.com
+.msoftdl.360.cn
+.mta.qq.com
+.n.3g.163.com
+.newrelic.com
+.news.push.126.net
+.newvector.map.baidu.com
+.novelsns.html5.qq.com
+.offnavi.map.baidu.com
+.ope.tanx.com
+.opehs.tanx.com
+.openapi.guanjia.qq.com
+.osfota.cdn.aliyun.com
+.otf.msn.com
+.p3p.mmstat.com
+.p3p.sogou.com
+.page.amap.com
+.palmnews.sina.cn
+.pb3.pstatp.com
+.pbd.sogou.com
+.pcbrowser.dd.qq.com
+.pcookie.tanx.com
+.pdc.micloud.xiaomi.net
+.pfp.sina.com.cn
+.phs.tanx.com
+.ping.acc.sogou.com
+.ping.pinyin.sogou.com
+.pinghot.qq.com
+.pmir.3g.qq.com
+.pms.mb.qq.com
+.popme.163.com
+.promote.biz.weibo.cn
+.proxy.sec.miui.com
+.ps.map.baidu.com
+.psfq.gou.sogou.com
+.puds.test.uae.uc.cn
+.push.yuedu.163.com
+.pushapi.lenovomm.com
+.pvdata.ku6.com
+.pvstat.html5.qq.com
+.qhl.bealge.sogou.com
+.qqshow2-item.qq.com
+.r.mail.163.com
+.rad.microsoft.com
+.rd.e.sogou.com
+.rdstat.tanx.com
+.recmd.html5.qq.com
+.report.qcloud.com
+.report.vip.qq.com
+.res.mmstat.com
+.rescn.u3.ucweb.com
+.rm.sina.com.cn
+.rmads.eu.msn.com
+.rmoeu.mercury.sogou.com
+.routertips.video.qq.com
+.s.img.mix.sina.com.cn
+.safebrowsing.googleapis.com
+.sapi.sina.cn
+.sax.sina.cn
+.sax.sina.com.cn
+.sax1.sina.com.cn
+.sax2.sina.com.cn
+.sax3.sina.com.cn
+.sax4.sina.com.cn
+.sax5.sina.com.cn
+.sax6.sina.com.cn
+.sax7.sina.com.cn
+.sax8.sina.com.cn
+.sax9.sina.com.cn
+.saxn.sina.com.cn
+.saxs.sina.com.cn
+.schemas.android.com
+.sdkconfig.video.qq.com
+.sea.napi.ucweb.com
+.sec-cdn.static.xiaomi.net
+.sec.resource.xiaomi.net
+.service.danmu.youku.com
+.setting.snswin.qq.com
+.sg.a.stat.mi.com
+.shooter.m.jd.com
+.show.look.360.cn
+.showwxml.qq.com
+.simba.m.taobao.com
+.slog.sina.cn
+.slog.sina.com.cn
+.ssl-cdn.static.browser.mi-img.com
+.staging.admin.e.mi.com
+.stat.simba.taobao.com
+.static.map.bdimg.com
+.static.su.baidu.com
+.staticadm.leju.sina.com.cn
+.statis.mobile.youku.com
+.statis.push.netease.com
+.statsfe1.ws.microsoft.com
+.strip.alicdn.com
+.susapi.lenovomm.com
+.suvset.sohu.com
+.sv.map.baidu.com
+.sw.mobile.sogou.com
+.swa.gtimg.com
+.t.sj.qq.com
+.t10.baidu.com
+.t11.baidu.com
+.t12.baidu.com
+.ta.qq.com
+.temai.snssdk.com
+.temai.taobao.com
+.tj.video.qq.com
+.toolbar.msn.com
+.top.h.qhimg.com
+.toruk.tanx.com
+.tpush.html5.qq.com
+.ttjx-online.cn-hangzhou.log.aliyuncs.com
+.tui.gtimg.com
+.u-x.jd.com
+.u.x.jd.com
+.uc9.ucweb.com
+.ucus.ucweb.com
+.udpolimenew.baidu.com
+.ufosdk.baidu.com
+.uid.ksosoft.com
+.union.discuz.qq.com
+.unitacs.m.taobao.com
+.up1.tj.u2.ucweb.com
+.up4.ucweb.com
+.user1.game.qq.com
+.utp.ucweb.com
+.vpic.video.qq.com
+.vs19.gzcu.u3.ucweb.com
+.vs2.gzcu.u3.ucweb.com
+.vs7.gzcu.u3.ucweb.com
+.vs8.gzct.u3.ucweb.com
+.vs8.gzcu.u3.ucweb.com
+.w.m.taobao.com
+.wap3.ucweb.com
+.wapwbclick.mobile.sina.cn
+.wax.weibo.com
+.wb.gtimg.com
+.web.sogou.com
+.widget.weibo.com
+.wn.x.jd.com
+.woocall.sina.com.cn
+.ws.sj.qq.com
+.wtradv.market.xiaomi.com
+.xmpush.xiaomi.com
+.xz-development.oss-cn-beijing.aliyuncs.com
+.yt.mmstat.com
+.zhanzhang.baidu.com
+.zhstatic.zhihu.com
