--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -5131,3 +5131,8 @@ click.suning.cn
 .yt.mmstat.com
 .zhanzhang.baidu.com
 .zhstatic.zhihu.com
+.a0.app.xiaomi.com
+.c.bing.com
+.flash.sec.miui.com
+.pardot.com
+.token.safebrowsing.apple
