--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,11 +1,8 @@
-# 默认情况下都可以开 extended-matching
-# .amdc.m.taobao.com 在extended-matching模式中会误杀1688，但还可以保留
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-12 17:52:26
+# Total rules: 4941
+# .acs.m.taobao.com 在extended-matching下误杀太多，建议去除
 # .ju.taobao.com 会误杀 mk.ju.taobao.com，建议去除
-# .alimama.com 误杀阿里万相台，建议去除
-# .acs.m.taobao.com extended-matching下误杀太多，建议去除
-# .s.click.taobao.com 造成误杀，建议去除
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-12 16:38:55
-# Total rules: 4635
+
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
 .0lovespells0.blogspot.com
@@ -82,6 +79,7 @@
 .accscdn.m.taobao.com
 .accwww9.53kf.com
 .acjs.aliyun.com
+.acookie.alimama.com
 .acs4baichuan.m.taobao.com
 .act.ds.kakao.com
 .act.qq.com
@@ -359,7 +357,10 @@
 .affiliate.googleusercontent.com
 .affim.baidu.com
 .afp.alicdn.com
+.afpeng.alimama.com
 .afpmm.alicdn.com
+.afpssp.alimama.com
+.afptrack.alimama.com
 .agility.cnn.com
 .agkn.com
 .agoodm.m.taobao.com
@@ -590,6 +591,7 @@
 .balticpipe.wordpress.com
 .bam-x.com
 .banlv.baidu.com
+.banner.alimama.com
 .bannersweb.s3.amazonaws.com
 .bar.baidu.com
 .bat.bing.com
@@ -666,6 +668,7 @@
 .c-5uwzmx78pmca09x24aiux2euavx2ekwu.g00.msn.com
 .c-adash.m.taobao.com
 .c-nfa.jd.com
+.c.alimama.com
 .c.ar.msn.com
 .c.arstechnica.com
 .c.at.msn.com
@@ -772,6 +775,7 @@
 .classify-client.services.mozilla.com
 .clc.stackoverflow.com
 .cleaner.baidu.com
+.click.alimama.com
 .click.aliyun.com
 .click.bes.baidu.com
 .click.bokecc.com
@@ -3612,6 +3616,7 @@
 .oth.eve.qq.com
 .otpercpiheno.blogspot.com
 .outlookads.live.com
+.p.alimama.com
 .p.controld.com
 .p.hentaiforce.net
 .p.imgur.com
@@ -4129,6 +4134,7 @@
 .static-doubleclick-net.l.google.com
 .static-tracking.klaviyo.com
 .static.2mdn.net
+.static.alimama.com
 .static.ku6.com
 .static.map.bdimg.com
 .static.narrativ.com
@@ -4196,6 +4202,7 @@
 .sz88.oss-cn-shenzhen.aliyuncs.com
 .t-dsp.pinduoduo.com
 .t.9gag.com
+.t.alimama.com
 .t.e.x.com
 .t.imgur.com
 .t.sj.qq.com
@@ -4640,3 +4647,299 @@
 .zx.docin.com
 .zymo.mps.weibo.com
 .zz.bdstatic.com
+9ibbcq2d.sina.cn
+acfeedbackws.icloud.com
+act.commercial.shouji.360.cn
+ad-sh-sz-zb.wagbridge.tanx.alimama.com
+ad-stat.ksosoft.com
+ad.21cn.com
+ad.alimama.com
+ad.bn.netease.com
+ad.gamebox.360.cn
+ad.hpplay.cn
+ad.iot.360.cn
+adapi.shouji.360.cn
+adashx.ut.ele.me
+adavideo.baidu.com
+adc.hpplay.cn
+adcdn.hpplay.cn
+adeng.hpplay.cn
+adlog.vivo.com.cn
+adproxy.autohome.com.cn
+ads.privacy.qq.com
+adsehera.ximalaya.com
+adsh.m.taobao.com
+adsh.wagbridge.1688.alimama.com
+adsh.wagbridge.alibaba.alimama.com
+adsh.wagbridge.tanx.alimama.com
+adsh.wagbridge.taobao.alimama.com
+adsh.wagbridge.tmall.alimama.com
+adstore-1252524079.file.myqcloud.com
+adstore-index-1252524079.file.myqcloud.com
+adsz.wagbridge.1688.alimama.com
+adsz.wagbridge.tanx.alimama.com
+adsz.wagbridge.taobao.alimama.com
+adsz.wagbridge.tmall.alimama.com
+adtrack.e.kuaishou.com
+advert.lx.netease.com
+adx-dra.op.hicloud.com
+adx.alimama.com
+adx.yiche.com
+adxlog.vivo.com.cn
+afdconf.baidu.com
+aicleaner.shouji.360.cn
+amap-aos-info-nogw.amap.com
+amdc.m.youku.com
+amos.alicdn.com
+ana.masky.biddingx.com
+api-js.mixpanel.com
+api-scout.vercel.app
+api.chat.xiaomi.net
+api.e.kuaishou.com
+api.g.micloud.xiaomi.net
+api.hybrid.intl.xiaomi.com
+api.hybrid.xiaomi.com
+api.sec.intl.miui.com
+api2.e.kuaishou.com
+apiv4-iyes.youku.com
+app.migc.xiaomi.com
+appgoad.189.cn
+applogapi.autohome.com.cn
+appupdates.189.cn
+arms-retcode.aliyuncs.com
+audio-ak-spotify-com.akamaized.net
+awsusor0-cdn.fds-ssl.api.xiaomi.com
+baichuan-sdk.alicdn.com
+be01.hh.xiaomi.com
+bgp.fe01.c3.xiaomi.com
+bk01.hh.xiaomi.com
+bksoup.v.qq.com
+blog.xiaomi.com
+bs.l.qq.com
+c.id.mi.com
+c.l.qq.com
+c2.l.qq.com
+cb.l.qq.com
+cdn-haokanapk.baidu.com
+cdn.1rtb.com
+cdn.exp.xiaomi.com
+cdn.fds-ssl.api.xiaomi.com
+cdn.getkoala.com
+cl2.webterren.com
+click-bes.baidu.com
+click.hd.sohu.com.cn
+cm.dmp.sina.cn
+cm.l.qq.com
+cnc.fe01.lg.xiaomi.com
+collect.foresightnews.pro
+commercial.shouji.360.cn
+config-p2p-other.vcloud.ks-live.com
+contactapi.micloud.xiaomi.net
+controller.intl.xiaomi.com
+count.taobao.com
+ctc.fe01.c3.xiaomi.com
+ctc.fe02.c3.xiaomi.com
+d.xiaomi.com
+d1oxlq5h9kq8q5.cloudfront.net
+dns.m.sm.cn
+dns.wechat.com
+download.wan.sohu.com
+dsp-x.jd.com
+du.163.com
+err.taobao.com
+events-analytics.apple.com
+f1.g.mi.com
+f4.market.xiaomi.com
+f6.market.xiaomi.com
+f7.market.xiaomi.com
+f8.market.xiaomi.com
+fe02.lg.xiaomi.com
+fe05.lg.xiaomi.com
+feed-image.baidu.com
+feedback.search.microsoft.com
+feedbackws.icloud.com
+font.sec.miui.com
+free-aos-cdn-image.amap.com
+frontier-aweme-hl.snssdk.com
+fyb-2.cdn.bcebos.com
+game.wostore.cn
+gecko-hl.snssdk.com
+gecko-lq.snssdk.com
+geo.hicloud.com
+geolocation.onetrust.com
+global.search.xiaomi.net
+gtms01.alicdn.com
+gtms02.alicdn.com
+gtms03.alicdn.com
+gtms04.alicdn.com
+guanggaoad.youku.com
+hc-ssp.sm.cn
+hd.xiaojukeji.com
+hd.xiaomi.com
+hd02.lg.xiaomi.com
+hdj.baidu.com
+healthdata.hicloud.com
+heyue.xiaomi.com
+hk.mibi.xiaomi.com
+hm.l.qq.com
+hm.xiaomi.com
+httpdns.volces.com
+huawei.facebook.com
+huichuan-mc.sm.cn
+huodong.ios.shouji.360.cn
+huodong.xiaomi.com
+huosai.xiaomi.com
+i.xiaomi.com
+iad.g.163.com
+iadmat.nosdn.127.net
+iadmatapk.nosdn.127.net
+igame.xiaomi.com
+ilce.alicdn.com
+ime.api.xiaomi.com
+inside.rtbasia.com
+insights.samsung.com
+is.snssdk.com
+jrad.jd.com
+js.iterable.com
+l2.l.qq.com
+l6urqh27.sina.cn
+launch.apple.com
+lb.l.qq.com
+livec.l.qq.com
+livem.l.qq.com
+livep.l.qq.com
+lives.l.ott.video.qq.com
+lives.l.qq.com
+livew.l.qq.com
+log.star.ele.me
+log.stat.kugou.com
+log1.cmpassport.com
+logview.uc.alimama.com
+lookup.api.bsb.baidu.com
+ls.l.qq.com
+m.game.weibo.cn
+m.jr.mi.com
+meihua.xiaomi.com
+mibi.api.xiaomi.com
+mibi.xiaomi.com
+micardapi.micloud.xiaomi.net
+mig.str.mdt.qq.com
+miniapp-ad.cdn.bcebos.com
+mis.migc.xiaomi.com
+misc.wcd.qq.com
+mixern.sina.cn
+mixers.sina.cn
+monitor-stsdk.vivo.com.cn
+mp.huangye.miui.com
+mpush-api.aliyun.com
+msg.shouji.360.cn
+msmetrics-test.ws.sonos.com
+mssp.baidu.com
+mtrace.play.cp81.ott.cibntv.net
+mtt.eve.mdt.qq.com
+mtt.str.mdt.qq.com
+nadvideo2.baidu.com
+news-l.play.ott.video.qq.com
+news.l.qq.com
+nlog.baidu.com
+omgmta.play.ott.video.qq.com
+onrt-stsdk.vivo.com.cn
+openjmacs.m.taobao.com
+openpanel.follow.is
+orbit.jd.com
+order.music.xiaomi.com
+ort-stsdk.vivo.com.cn
+ossgw.alicdn.com
+oth.eve.mdt.qq.com
+oth.str.mdt.qq.com
+oth.update.mdt.qq.com
+p.l.qq.com
+p2.l.qq.com
+p2sdmkj6t.bkt.clouddn.com
+pb.hd.sohu.com.cn
+pg-ad-b1.ws.126.net
+pg-ad-b2.ws.126.net
+phonecallapi.micloud.xiaomi.net
+pl.youku.com
+pmall.migc.xiaomi.com
+pnrt-stsdk.vivo.com.cn
+pre-ad.alimama.com
+pre-adv.alimama.com
+pre2-ad.alimama.com
+pre3-ad.alimama.com
+prod.nexusrules.live.com
+proxy-mob-cld.alicdn.com
+prt-stsdk.vivo.com.cn
+qgnu18wo.sina.cn
+qiye.xiaomi.com
+r.dmp.sina.cn
+r.dmp.sina.com.cn
+r.sg.sec.miui.com
+rd.autohome.com.cn
+report.qqweb.qq.com
+samsungeurope.eu.qualtrics.com
+saxs.sina.cn
+sdfp.snssdk.com
+secode2.hd.xiaomi.com
+securemetrics.apple.com
+sentry.d.mi.com
+sf0.market.xiaomi.com
+sfsapi.micloud.xiaomi.net
+shoes.app-xae.xiaomi.com
+show.re.taobao.com
+slb-p2p.vcloud.ks-live.com
+sltint.adv.ott.cibntv.net
+so.sina.cn
+splashimgretrybssdl.cloud.kugou.com
+stat.dns.sb
+stat.loli.net
+static.mibi.xiaomi.com
+statis.api.3g.youku.com
+stats.xiaomi.com
+stnetsdk.appstore.vivo.com.cn
+stnetsdk.vivo.com.cn
+stun.smartgslb.com
+switch.cup.com.cn
+t1.g.mi.com
+tc.hd.xiaomi.com
+tel.fe01.hh.xiaomi.com
+ten.sngapm.qq.com
+test.xiaomi.com
+tf.logview.alimama.com
+tmeadbak.y.qq.com
+tmeadquic.y.qq.com
+tob-cms.bj.bcebos.com
+topapi.cp12.ott.cibntv.net
+toutiao-frontier.snssdk.com
+tpns.qq.com
+trace2.rtbasia.com
+trial.api.huangye.miui.com
+ttnet-dig.feishu.cn
+ttnet-doh.feishu.cn
+tui.taobao.com
+tv.app.migc.xiaomi.com
+tz.sec.xiaomi.com
+umami.rss3.io
+url8807.global.passport.xiaomi.com
+us.l.qq.com
+userid.xiaomi.com
+vcardsdkservice.vivo.com.cn
+vd.l.qq.com
+vd0.market.xiaomi.com
+vd1.market.xiaomi.com
+video.market.xiaomi.com
+video.xiaomi.com
+vmindhls.tc.qq.com
+vs.biz.weibo.com
+vstat.my.tv.sohu.com
+vv84.bj.bcebos.com
+w.l.qq.com
+wmlog.meituan.com
+xadx.file.market.xiaomi.com
+xiazai.xiaomi.com
+xitong.xiaomi.com
+xshare.api.xiaomi.com
+yaolu.mh.163.com
+yaolu.yuedu.163.com
+ynuf.aliapp.org
+yt-adv.bn.netease.com
