--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-12 17:52:26
-# Total rules: 4941
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-12 20:14:27
+# Total rules: 4942
 # .acs.m.taobao.com 在extended-matching下误杀太多，建议去除
 # .ju.taobao.com 会误杀 mk.ju.taobao.com，建议去除
 
@@ -4648,6 +4648,7 @@
 .zymo.mps.weibo.com
 .zz.bdstatic.com
 9ibbcq2d.sina.cn
+ac.dun.163yun.com
 acfeedbackws.icloud.com
 act.commercial.shouji.360.cn
 ad-sh-sz-zb.wagbridge.tanx.alimama.com
