--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-12 20:14:27
-# Total rules: 4942
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-12 23:57:47
+# Total rules: 5009
 # .acs.m.taobao.com 在extended-matching下误杀太多，建议去除
 # .ju.taobao.com 会误杀 mk.ju.taobao.com，建议去除
 
@@ -109,6 +109,7 @@
 .ad.docer.wps.cn
 .ad.eporner.com
 .ad.fcbox.com
+.ad.hpplay.cn
 .ad.india.xiaomi.com
 .ad.intl.xiaomi.com
 .ad.jia.360.cn
@@ -126,6 +127,7 @@
 .ad.sohu.com
 .ad.thepaper.cn
 .ad.us.sinaimg.cn
+.ad.v3mh.com
 .ad.weibo.com
 .ad.weixin.qq.com
 .ad.xelements.cn
@@ -167,11 +169,15 @@
 .adboss.qzone.qq.com
 .adbox.sina.com.cn
 .adbs.ximalaya.com
+.adc.hpplay.cn
+.adcdn.hpplay.cn
 .adconsent.samsungrs.com
 .adcore.lenovomm.com
+.addata.jd.com
 .addata.ku6.com
 .ade-rtb.netease.com
 .adebus.oss-cn-shenzhen.aliyuncs.com
+.adeng.hpplay.cn
 .adevents.msn.com
 .adeventtracker.spotify.com
 .adeventtrackermonitoring.spotify.com
@@ -217,6 +223,7 @@
 .ads-game-187f4.firebaseapp.com
 .ads-img-al.xhscdn.com
 .ads-img-qc.xhscdn.com
+.ads-marketing-vivofs.vivo.com.cn
 .ads-privacy-api.prd.mz.internal.unity3d.com
 .ads-sg.tiktok.com
 .ads-static.conde.digital
@@ -253,6 +260,7 @@
 .ads.twitter.com
 .ads.uc.cn
 .ads.us.tiktok.com
+.ads.v3mh.com
 .ads.webmd.com
 .ads.xiaomi.com
 .ads.yahoo.com
@@ -260,9 +268,14 @@
 .ads.youtube.com
 .ads1.msn.com
 .ads2.msn.com
+.ads3-normal-hl.zijieapi.com
+.ads3-normal-lf.zijieapi.com
 .ads3-normal-lq.zijieapi.com
+.ads3-normal.zijieapi.com
+.ads5-normal-hl.zijieapi.com
 .ads5-normal-lf.zijieapi.com
 .ads5-normal-lq.zijieapi.com
+.ads5-normal.zijieapi.com
 .adsafeprotected.com
 .adsapi.togothermany.cn
 .adscdn.baidu.com
@@ -272,6 +285,7 @@
 .adsdk.microsoft.com
 .adsdk.vivo.com.cn
 .adsdk.yandex.ru
+.adse.test.ximalaya.com
 .adse.wsa.ximalaya.com
 .adse.ximalaya.com
 .adsebs.ximalaya.com
@@ -286,6 +300,8 @@
 .adserviceretry.kugou.com
 .adsfile.bssdlbig.kugou.com
 .adsfile.qq.com
+.adsfilebssdlbig.ali.kugou.com
+.adsfileretry.service.kugou.com
 .adsgroup.qq.com
 .adshmct.qq.com
 .adshmmsg.qq.com
@@ -308,6 +324,9 @@
 .adstatic.zhihu.com
 .adstest.weather.com
 .adstextview.qq.com
+.adstore-1252524079.file.myqcloud.com
+.adstore-index-1252524079.file.myqcloud.com
+.adstudio.spotify.com
 .adsup.togothermany.cn
 .adsview.qq.com
 .adsview2.qq.com
@@ -496,6 +515,7 @@
 .api.uca.cloud.unity3d.com
 .api.waptest.taobao.com
 .api.youqian.baidu.com
+.api5-normal-quic-lf.ixigua.com
 .apmplus.ap-southeast-1.volces.com
 .apoll.m.taobao.com
 .app-ads-services.com
@@ -514,6 +534,7 @@
 .app.updates.digicert.com
 .appbaqend.com
 .appc.baidu.com
+.appcfg.v.qq.com
 .appcloud2.in.zhihu.com
 .appdownload.alicdn.com
 .appdownload.youku.com
@@ -581,6 +602,8 @@
 .babes-mansion.s3.amazonaws.com
 .badding.oss-ap-southeast-1.aliyuncs.com
 .badjs.weixinbridge.com
+.baichuan-sdk.alicdn.com
+.baichuan-sdk.taobao.com
 .baichuan.baidu.com
 .baidustatic.com
 .baidutv.baidu.com
@@ -620,6 +643,7 @@
 .beap-bc.yahoo.com
 .bes-mtj.baidu.com
 .beyondwickedmapping.org
+.bgg.baidu.com
 .bhwkju.vivo.com
 .biddingx.com
 .bidswitch.net
@@ -654,6 +678,7 @@
 .bs-adserver.b-cdn.net
 .bs.yandex.ru
 .bshare.cn
+.bsrv.qq.com
 .btlaunch.baidu.com
 .btloader.com
 .btrace.qq.com
@@ -739,6 +764,7 @@
 .cbjslog.baidu.com
 .cc.map.qq.com
 .cc.sys.intl.xiaomi.com
+.ccc-x.jd.com
 .ccc.sys.intl.xiaomi.com
 .ccclub.cmbchina.com
 .cdj-dap.s3-ap-northeast-1.amazonaws.com
@@ -750,6 +776,7 @@
 .cdn.decibelinsight.net
 .cdn.onesignal.com
 .cdn.tanx.com
+.cdn.ynuf.aliapp.org
 .cdnweb3.pages.dev
 .cdp.cloud.unity3d.com
 .cert-test.sandbox.google.com
@@ -761,6 +788,7 @@
 .channelusa.samsung.com
 .chaoku.oss-cn-chengdu.aliyuncs.com
 .chaseherbalpasty.com
+.chat1.jd.com
 .cheap-web-hosting-here.blogspot.com
 .cheap-xanax-here.blogspot.com
 .chimpstatic.com
@@ -2534,7 +2562,9 @@
 .dsh1ct2zrfakt.cloudfront.net
 .dsh7ky7308k4b.cloudfront.net
 .dsnymrk0k4p3v.cloudfront.net
+.dsp-x.jd.com
 .dsp.ali213.net
+.dsp.fcbox.com
 .dsp.simba.taobao.com
 .dspsdk.pinduoduo.com
 .dsuyzexj3sqn9.cloudfront.net
@@ -2749,6 +2779,7 @@
 .fdt.kraken.com
 .featureassets.org
 .featuregates.org
+.feed-image.baidu.com
 .feed.baidu.com
 .feedback-c.zijieapi.com
 .feedback-dre.platform.hicloud.com
@@ -2757,6 +2788,7 @@
 .fexclick.baidu.com
 .ffbbbdc6d3c353211fe2ba39c9f744cd.com
 .ffe390afd658c19dcbf707e0597b846d.de
+.file.daihuo.qq.com
 .files2.sogou.com
 .finnews7.wordpress.com
 .fioricet-online.blogspot.com
@@ -2905,6 +2937,7 @@
 .gridsumdissector.com
 .growingio.com
 .grs.hicloud.com
+.gslb.hpplay.cn
 .gslbali.ximalaya.com
 .gsp1.baidu.com
 .gtm.temu.com
@@ -2915,6 +2948,7 @@
 .guardianapps.co.uk
 .guess.h.qhimg.com
 .guid.tpns.tencent.com
+.gvideo.qpic.cn
 .gvt2.com
 .gxb.mmstat.com
 .gz.apigw.tencentcs.com
@@ -2940,6 +2974,7 @@
 .hbid.ams3.cdn.digitaloceanspaces.com
 .hc.baidu.com
 .hdtu.oss-cn-beijing.aliyuncs.com
+.heads-fa.spotify.com
 .health-metrics-api.setapp.com
 .helpnanacenter.helpscoutdocs.com
 .heoads.b-cdn.net
@@ -2963,6 +2998,7 @@
 .hoplink.ksosoft.com
 .hornylitics.b-cdn.net
 .hotapi-va.isnssdk.com
+.hotupgrade.hpplay.cn
 .hpd.baidu.com
 .hs-scripts.com
 .ht.www.sogou.com
@@ -2987,6 +3023,7 @@
 .huatuo.qq.com
 .huaxiang.eastmoney.com
 .hudong.pl.youku.com
+.hugelog.fcbox.com
 .hui.sohu.com
 .huichuan.sm.cn
 .huodong.mi.com
@@ -2994,6 +3031,7 @@
 .huodong.vip.youku.com
 .husky.sogou.com
 .hwstats.unity3d.com
+.hybrid.miniapp.taobao.com
 .hydra.alibaba.com
 .hydro-ma-proxy.akamaized.net
 .hydrocodone-buy-online.blogspot.com
@@ -3046,6 +3084,7 @@
 .image-ad.sm.cn
 .image.9game.cn
 .image.box.xiaomi.com
+.image.hpplay.cn
 .image.p4p.sogou.com
 .image.zzd.sm.cn
 .imageplus.baidu.com
@@ -3059,6 +3098,7 @@
 .images.it.business.samsung.com
 .images.newsletter.larksuite.com
 .images.partnersupport.samsung.com
+.images.pinduoduo.com
 .images.reldirect.lenovo.com
 .images.smbdirect.lenovo.com
 .images.sohu.com
@@ -3072,7 +3112,6 @@
 .img.alibaba.com
 .img.gou.wpscdn.cn
 .img.response.digicert.com
-.img.shouji.sogou.com
 .img1.126.net
 .img1.gtimg.com
 .img1.pcfg.cache.wps.cn
@@ -3099,7 +3138,6 @@
 .informer.yandex.ru
 .ingress.linktr.ee
 .inmobi.com
-.input.shouji.sogou.com
 .insight.ucweb.com
 .insights.algolia.io
 .insights.alibaba.com
@@ -3158,6 +3196,7 @@
 .jscode.jbzj.com
 .jspassport.ssl.qhimg.com
 .jsqmt.qq.com
+.jswebcollects.kugou.com
 .juejin.cn
 .juggler.services.disqus.com
 .jun01.oss-cn-beijing.aliyuncs.com
@@ -3166,6 +3205,7 @@
 .kaan.kakao.com
 .kape.dataplane.rudderstack.com
 .karanpcofficial.blogspot.com
+.kde.qq.com
 .keepblockingthislol.b-cdn.net
 .kepler.jd.com
 .kgipadstat.kugou.com
@@ -3178,6 +3218,7 @@
 .kjdvn1340-ads.blogspot.com
 .klipmart.forbes.com
 .kmmgoogle.oss-ap-southeast-1.aliyuncs.com
+.knicks.jd.com
 .kstj.baidu.com
 .ktkjmp.com
 .kuiniuca.com
@@ -3203,6 +3244,7 @@
 .links.nbcnews.com
 .links.services.disqus.com
 .links.younify.tv
+.lives.l.ott.video.qq.com
 .lm.licenses.adobe.com
 .lm.tv.sohu.com
 .lmbsy.qq.com
@@ -3220,6 +3262,7 @@
 .log-tb.isnssdk.com
 .log-vietnamplus-vn.cdn.ampproject.org
 .log.ajunews.com
+.log.amemv.com
 .log.byteoversea.com
 .log.cookieyes.com
 .log.fc.yahoo.com
@@ -3249,6 +3292,7 @@
 .log0-misc-alinc2.amemv.com
 .log0-misc-lf.amemv.com
 .log0-misc-lq.amemv.com
+.log1.cmpassport.com
 .log1.wtlogin.qq.com
 .log2.cmpassport.com
 .log2.sina.cn
@@ -3308,6 +3352,7 @@
 .lu.sogou.com
 .lu.sogoucdn.com
 .luckycat-power.snssdk.com
+.luimg.baidu.com
 .lupic.cdn.bcebos.com
 .lvip.youku.com
 .lxcdn.dl.files.xiaomi.net
@@ -3342,6 +3387,7 @@
 .marketo.com
 .martech.condenastdigital.com
 .masdk.3g.qq.com
+.masdkv6.3g.qq.com
 .master-shopify-tracker.s3.amazonaws.com
 .match.p4p.1688.com
 .matomo.openstreetmap.org
@@ -3404,6 +3450,7 @@
 .migc.g.mi.com
 .migcreport.g.mi.com
 .migrate.driveapi.micloud.xiaomi.net
+.mime.baidu.com
 .mimg.126.net
 .minfo.wps.cn
 .mini2015.qq.com
@@ -3429,6 +3476,7 @@
 .mlog.search.xiaomi.net
 .mm.jbzj.com
 .mm1.365dmp.com
+.mmgame.qpic.cn
 .mms.cnn.com
 .mms.lifehacker.com
 .mnaspm.com
@@ -3489,6 +3537,7 @@
 .mssdk-va.byteoversea.com
 .mssdk.bytedance.com
 .mssdk.volces.com
+.mssdk.zijieapi.com
 .mta.qq.com
 .mtga.setapp.com
 .mtj.baidu.com
@@ -3507,6 +3556,7 @@
 .na1r.services.adobe.com
 .na2m-pr.licenses.adobe.com
 .nadjibsoft.blogspot.com
+.nadvideo2.baidu.com
 .nativead.s3.amazonaws.com
 .nbc-jite.nbcuni.com
 .nbcollect.kugou.com
@@ -3563,6 +3613,7 @@
 .odc.weather.com
 .offer.alibaba.com
 .offnavi.map.baidu.com
+.ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
 .oimg.login.cnbc.com
 .oimg.m.calltheclose.cnbc.com
@@ -3593,6 +3644,7 @@
 .open.isnssdk.com
 .open.kuaishouzt.com
 .open.kwaizt.com
+.open.snssdk.com
 .openapi.guanjia.qq.com
 .openapi.samsung.com
 .openinstall.io
@@ -3608,6 +3660,7 @@
 .optimize.google.com
 .optimus-ads.amap.com
 .orange-dc.youku.com
+.orbit.jd.com
 .orbsrv.com
 .os-mon.zijieapi.com
 .osfota.cdn.aliyun.com
@@ -3677,6 +3730,7 @@
 .pcbrowser.dd.qq.com
 .pcfg.wps.cn
 .pclick.yahoo.com
+.pcm-img.zhls.qq.com
 .pcookie.tanx.com
 .pcstat.kugou.com
 .pcstatbak.kugou.com
@@ -3698,6 +3752,7 @@
 .pharmacy-news.blogspot.com
 .phs.tanx.com
 .pimlog.baidu.com
+.pin.hpplay.cn
 .pindao.huoban.taobao.com
 .ping.acc.sogou.com
 .ping.pinyin.sogou.com
@@ -3758,6 +3813,7 @@
 .promoted.soundcloud.com
 .propsid.b-cdn.net
 .proxy-skadnetwork.apple.com
+.proxy.advp.apple.com
 .proxy.sec.miui.com
 .ps.map.baidu.com
 .psfq.gou.sogou.com
@@ -3863,6 +3919,7 @@
 .report.meituan.com
 .report.qcloud.com
 .report.qq.com
+.report.tv.kohesport.qq.com
 .report.uc.heytapmobi.com
 .report.vip.qq.com
 .reports.sdiapi.com
@@ -3874,6 +3931,7 @@
 .resolver.msg.xiaomi.net
 .retcode.alicdn.com
 .retcode.taobao.com
+.review.gdtimg.com
 .rh.qq.com
 .rhaphaecelts.com
 .rich.qq.com
@@ -3894,6 +3952,7 @@
 .romeccs.microsoft.com
 .routertips.video.qq.com
 .rp.baidu.com
+.rp.hpplay.cn
 .rplog.baidu.com
 .rqd.qq.com
 .rs.sinajs.cn
@@ -3962,6 +4021,7 @@
 .sdk.m.youku.com
 .sdkapp.mobile.sina.cn
 .sdkapp.uve.weibo.com
+.sdkauth.hpplay.cn
 .sdkclick.mobile.sina.cn
 .sdkconfig.video.qq.com
 .sdkconfig.xiaomi.com
@@ -3976,12 +4036,17 @@
 .sealine.youku.com
 .seao.business.samsung.com
 .search.anonymous.ads.brave.com
+.search.ixigua.com
+.search3-search.ixigua.com
+.search5-search-hl.ixigua.com
+.search5-search.ixigua.com
 .searchads.apple.com
 .sec-cdn.static.xiaomi.net
 .sec.resource.xiaomi.net
 .secure.diet.mayoclinic.org
 .secureflashplayerfeedback.adobe.com
 .securemetrics-z.v.aaplimg.com
+.securemetrics.apple.com
 .securemetrics.blackrock.com
 .securemvt.apple.com
 .security-lq.snssdk.com
@@ -4013,6 +4078,7 @@
 .shenghuo.xiaomi.com
 .shooter.m.jd.com
 .shouji.360.cn
+.shouji.sogou.com
 .show-msgch.qq.com
 .show.look.360.cn
 .showwxml.qq.com
@@ -4030,6 +4096,8 @@
 .siteintercept.qualtrics.com
 .sjarvis.taobao.com
 .skdisplay.jd.com
+.sl.hpplay.cn
+.slb-p2p.vcloud.ks-live.com
 .slog.sina.cn
 .slog.sina.com.cn
 .smadex.com
@@ -4232,6 +4300,7 @@
 .tce.alicdn.com
 .tci.oss-ap-southeast-1.aliyuncs.com
 .tcss.qq.com
+.tdc.qq.com
 .tdid.m.qq.com
 .tdrec.youku.com
 .techain.baidu.com
@@ -4282,12 +4351,18 @@
 .tmea116.oss-cn-beijing.aliyuncs.com
 .tmead.y.qq.com
 .tmeadcomm.y.qq.com
+.tmfmazu-wangka.m.qq.com
+.tmfmazu.m.qq.com
 .tmfsdk.m.qq.com
+.tmfsdktcpv4.m.qq.com
 .tnc16-alisg.isnssdk.com
 .tnc16-useast1a.isnssdk.com
+.tnc3-aliec2.bytedance.com
 .tnc3-aliec2.snssdk.com
+.tnc3-alisc1.bytedance.com
 .tnc3-alisc1.zijieapi.com
 .tnc3-alisc2.zijieapi.com
+.tnc3-bjlgy.bytedance.com
 .tnc3-bjlgy.snssdk.com
 .tnc3-bjlgy.zijieapi.com
 .tns.simba.taobao.com
@@ -4375,8 +4450,10 @@
 .tuijian.baidu.com
 .tuisong.baidu.com
 .tunion-api.m.taobao.com
+.tvapp.hpplay.cn
 .tyh.taobao.com
 .typekit.net
+.tz.sec.xiaomi.com
 .u-x.jd.com
 .u.x.jd.com
 .u1.img.mobile.sina.cn
@@ -4436,6 +4513,7 @@
 .update.mobile.kugou.com
 .updatecenter.qq.com
 .uplog.inews.qq.com
+.uranus.jd.com
 .uranus.sogou.com
 .uranus.sohu.com
 .urbanairship.com
@@ -4479,8 +4557,11 @@
 .vidoomy.com
 .view.zijieapi.com
 .vilaghelyzete.blogspot.com
+.vipauth.hpplay.cn
 .virus-engine.sec.miui.com
+.virusinfo-cloudscan-cn.heytapmobi.com
 .visit.webhosting.yahoo.com
+.vlive.qqvideo.tc.qq.com
 .vntsm.com
 .vodus-api-serverless.azurewebsites.net
 .vodus-api.azurewebsites.net
@@ -4576,8 +4657,10 @@
 .www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
 .wwwyoutube.com
+.wxaintpcos.wxqcloud.qq.com.cn
 .wxs.qq.com
 .wxsnsad.tc.qq.com
+.wxsnsdy.tc.qq.com
 .wzjs1.oss-accelerate.aliyuncs.com
 .x.baidu.com
 .x.weather.com
@@ -4657,14 +4740,10 @@ ad.21cn.com
 ad.alimama.com
 ad.bn.netease.com
 ad.gamebox.360.cn
-ad.hpplay.cn
 ad.iot.360.cn
 adapi.shouji.360.cn
 adashx.ut.ele.me
 adavideo.baidu.com
-adc.hpplay.cn
-adcdn.hpplay.cn
-adeng.hpplay.cn
 adlog.vivo.com.cn
 adproxy.autohome.com.cn
 ads.privacy.qq.com
@@ -4675,8 +4754,6 @@ adsh.wagbridge.alibaba.alimama.com
 adsh.wagbridge.tanx.alimama.com
 adsh.wagbridge.taobao.alimama.com
 adsh.wagbridge.tmall.alimama.com
-adstore-1252524079.file.myqcloud.com
-adstore-index-1252524079.file.myqcloud.com
 adsz.wagbridge.1688.alimama.com
 adsz.wagbridge.tanx.alimama.com
 adsz.wagbridge.taobao.alimama.com
@@ -4710,7 +4787,6 @@ appupdates.189.cn
 arms-retcode.aliyuncs.com
 audio-ak-spotify-com.akamaized.net
 awsusor0-cdn.fds-ssl.api.xiaomi.com
-baichuan-sdk.alicdn.com
 be01.hh.xiaomi.com
 bgp.fe01.c3.xiaomi.com
 bk01.hh.xiaomi.com
@@ -4745,7 +4821,6 @@ d1oxlq5h9kq8q5.cloudfront.net
 dns.m.sm.cn
 dns.wechat.com
 download.wan.sohu.com
-dsp-x.jd.com
 du.163.com
 err.taobao.com
 events-analytics.apple.com
@@ -4756,7 +4831,6 @@ f7.market.xiaomi.com
 f8.market.xiaomi.com
 fe02.lg.xiaomi.com
 fe05.lg.xiaomi.com
-feed-image.baidu.com
 feedback.search.microsoft.com
 feedbackws.icloud.com
 font.sec.miui.com
@@ -4809,12 +4883,10 @@ lb.l.qq.com
 livec.l.qq.com
 livem.l.qq.com
 livep.l.qq.com
-lives.l.ott.video.qq.com
 lives.l.qq.com
 livew.l.qq.com
 log.star.ele.me
 log.stat.kugou.com
-log1.cmpassport.com
 logview.uc.alimama.com
 lookup.api.bsb.baidu.com
 ls.l.qq.com
@@ -4839,7 +4911,6 @@ mssp.baidu.com
 mtrace.play.cp81.ott.cibntv.net
 mtt.eve.mdt.qq.com
 mtt.str.mdt.qq.com
-nadvideo2.baidu.com
 news-l.play.ott.video.qq.com
 news.l.qq.com
 nlog.baidu.com
@@ -4847,7 +4918,6 @@ omgmta.play.ott.video.qq.com
 onrt-stsdk.vivo.com.cn
 openjmacs.m.taobao.com
 openpanel.follow.is
-orbit.jd.com
 order.music.xiaomi.com
 ort-stsdk.vivo.com.cn
 ossgw.alicdn.com
@@ -4882,13 +4952,11 @@ samsungeurope.eu.qualtrics.com
 saxs.sina.cn
 sdfp.snssdk.com
 secode2.hd.xiaomi.com
-securemetrics.apple.com
 sentry.d.mi.com
 sf0.market.xiaomi.com
 sfsapi.micloud.xiaomi.net
 shoes.app-xae.xiaomi.com
 show.re.taobao.com
-slb-p2p.vcloud.ks-live.com
 sltint.adv.ott.cibntv.net
 so.sina.cn
 splashimgretrybssdl.cloud.kugou.com
@@ -4919,7 +4987,6 @@ ttnet-dig.feishu.cn
 ttnet-doh.feishu.cn
 tui.taobao.com
 tv.app.migc.xiaomi.com
-tz.sec.xiaomi.com
 umami.rss3.io
 url8807.global.passport.xiaomi.com
 us.l.qq.com
