--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-13 07:51:45
-# Total rules: 5009
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-13 09:14:54
+# Total rules: 5024
 # .acs.m.taobao.com 在extended-matching下误杀太多，建议去除
 # .ju.taobao.com 会误杀 mk.ju.taobao.com，建议去除
 
@@ -380,6 +380,8 @@
 .afpmm.alicdn.com
 .afpssp.alimama.com
 .afptrack.alimama.com
+.agent.ap1.datadoghq.com
+.agent.datadoghq.com
 .agility.cnn.com
 .agkn.com
 .agoodm.m.taobao.com
@@ -451,6 +453,7 @@
 .analytics.query.yahoo.com
 .analytics.s3.amazonaws.com
 .analytics.snssdk.com
+.analytics.spankbang.com
 .analytics.spotify.com
 .analytics.techweb.com.cn
 .analytics.tiktok.com
@@ -2290,6 +2293,8 @@
 .dbcdqp72lzmvj.cloudfront.net
 .dbfu2bd09j3ln.cloudfront.net
 .dbfv8ylr8ykfg.cloudfront.net
+.dbm-metrics-intake.datadoghq.com
+.dbquery-intake.datadoghq.com
 .dbrpevozgux5y.cloudfront.net
 .dbujksp6lhljo.cloudfront.net
 .dbw7j2q14is6l.cloudfront.net
@@ -3062,6 +3067,7 @@
 .iads.unity3d.com
 .iadsdk.apple.com
 .iadworkbench.apple.com
+.iam-rum-intake.datadoghq.com
 .ic.ksosoft.com
 .icelandclothing.myshopify.com
 .ichannel.isnssdk.com
@@ -3313,6 +3319,7 @@
 .loggw.alipaydns.com
 .logs.amap.com
 .logs.appsource.microsoft.com
+.logs.datadoghq.com
 .logs.netflix.com
 .logsdk.qq.com
 .logservice-dra.platform.hicloud.com
@@ -3440,6 +3447,7 @@
 .metrics.sky.com
 .metrics.ted.com
 .metrics.theatlantic.com
+.metrics.washingtonpost.com
 .metrika.yandex.ru
 .mg.games.sina.com.cn
 .mgtv-bbqn.oss-cn-beijing.aliyuncs.com
@@ -3602,6 +3610,7 @@
 .ns38541.ovh.net
 .nsclick.baidu.com
 .nsclickvideo.baidu.com
+.ny77jj.washingtonpost.com
 .nytadvertising.nytimes.com
 .o.lenovo.com
 .o.webmd.com
@@ -3619,6 +3628,7 @@
 .oimg.m.calltheclose.cnbc.com
 .oimg.nbcuni.com
 .oimsgad.qq.com
+.om.barrons.com
 .om.dowjoneson.com
 .omappapi.com
 .omgid.qq.com
@@ -3627,6 +3637,7 @@
 .omni.conferencing.pccw.com
 .omni.istockphoto.com
 .omniture.lg.com
+.oms.barrons.com
 .oms.dowjoneson.com
 .oms.wsj.com
 .omt.shinobi.jp
@@ -4117,6 +4128,7 @@
 .smetrics.samsung.com.cn
 .smetrics.science.org
 .smetrics.sky.com
+.smetrics.washingtonpost.com
 .smetrics2.nokia.com
 .smr.snssdk.com
 .sms.email-disney.cjm.adobe.com
@@ -4247,6 +4259,7 @@
 .stsdk.vivo.com.cn
 .su.bdimg.com
 .su.bdstatic.com
+.subscribe.washingtonpost.com
 .success.act-on.com
 .sugar.zhihu.com
 .suggestion.baidu.com
@@ -4288,6 +4301,7 @@
 .tagdelivery.mayoclinic.org
 .tags.voacantonese.com
 .tajs.qq.com
+.talk.washingtonpost.com
 .talkingdata.com
 .tapdaq-adverts.global.ssl.fastly.net
 .tapioni.com
@@ -4557,6 +4571,7 @@
 .vidoomy.com
 .view.zijieapi.com
 .vilaghelyzete.blogspot.com
+.vip.granicus.com
 .vipauth.hpplay.cn
 .virus-engine.sec.miui.com
 .virusinfo-cloudscan-cn.heytapmobi.com
