--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-13 09:14:54
-# Total rules: 5024
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-13 15:30:33
+# Total rules: 5025
 # .acs.m.taobao.com 在extended-matching下误杀太多，建议去除
 # .ju.taobao.com 会误杀 mk.ju.taobao.com，建议去除
 
@@ -3739,6 +3739,7 @@
 .pc.uf.ksosoft.com
 .pcapp-data-collect.youku.com
 .pcbrowser.dd.qq.com
+.pcdn.xmcdn.com
 .pcfg.wps.cn
 .pclick.yahoo.com
 .pcm-img.zhls.qq.com
