--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,7 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-13 15:30:33
-# Total rules: 5025
-# .acs.m.taobao.com 在extended-matching下误杀太多，建议去除
-# .ju.taobao.com 会误杀 mk.ju.taobao.com，建议去除
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-14 11:08:12
+# Total rules: 4999
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -408,7 +406,6 @@
 .aliunion.cn.yahoo.com
 .aliyaoberbrunnergreg21.myshopify.com
 .als-svc.nytimes.com
-.als.baidu.com
 .amazon-adsystem.amazon.com
 .amazon-adsystem.com
 .amc.yandex.ru
@@ -507,10 +504,8 @@
 .api.miwifi.com
 .api.mp.uc.cn
 .api.newsfeed.intl.miui.com
-.api.open.uc.cn
 .api.sail-personalize.com
 .api.sail-track.com
-.api.sec.miui.com
 .api.setting.intl.miui.com
 .api.shuaji.360.cn
 .api.sprig.com
@@ -702,7 +697,6 @@
 .c.at.msn.com
 .c.baidu.com
 .c.be.msn.com
-.c.bing.com
 .c.br.msn.com
 .c.ca.msn.com
 .c.cl.msn.com
@@ -813,7 +807,6 @@
 .click.dji.com
 .click.gamersky.com
 .click.hd.sohu.com
-.click.mz.simba.taobao.com
 .click.oneplus.com
 .click.simba.taobao.com
 .click.tanx.com
@@ -2269,7 +2262,6 @@
 .data.rtcdpsummitlab.test.ajo.adobe.com
 .data.sbux.test.ajo.adobe.com
 .data.sec.intl.miui.com
-.data.sec.miui.com
 .data.service.paypal.com
 .data.shrm.test.ajo.adobe.com
 .data.starbucks.test.ajo.adobe.com
@@ -2673,6 +2665,7 @@
 .e.kuaishou.com
 .e.qq.com
 .e.shop.app
+.e045f561.b-cdn.net
 .e1.o.lencr.org
 .easytomessage.com
 .eatthiskok.b-cdn.net
@@ -2750,7 +2743,6 @@
 .eventsproxy.gargantuan.futureplc.com
 .everestop.io
 .evs.icy-lake.kickstarter.com
-.evtubescms.phncdn.com
 .ex.qq.com
 .ex.tanx.com
 .exceptionlog.kugou.com
@@ -2799,7 +2791,6 @@
 .fioricet-online.blogspot.com
 .firebase.googleapis.com
 .firebasedynamiclinks.googleapis.com
-.firebaseinstallations.googleapis.com
 .firebaselogging-pa.googleapis.com
 .firebaselogging.googleapis.com
 .first-hufu.oss-cn-shanghai.aliyuncs.com
@@ -2822,7 +2813,6 @@
 .forms.lenovo.com
 .fourier.alibaba.com
 .fourier.taobao.com
-.fp-upload.dun.163.com
 .fpa-api.arstechnica.com
 .fpa-cdn.arstechnica.com
 .fpa-events.arstechnica.com
@@ -2830,7 +2820,6 @@
 .fpb.sohu.com
 .fpnpmcdn.net
 .fpt.microsoft.com
-.fraudmetrix.cn
 .free-cdn.oss-cn-shanghai.aliyuncs.com
 .freebitcoin.pages.dev
 .freewheel-mtgx-tv.akamaized.net
@@ -2886,7 +2875,6 @@
 .geoedge.be
 .geolocation.forbes.com
 .gepush.com
-.get.sogou.com
 .getclicky.com
 .getui.com
 .getui.net
@@ -2897,7 +2885,6 @@
 .gg-ads.b-cdn.net
 .gg.kugou.com
 .ggtp-1255424916.cos.ap-chengdu.myqcloud.com
-.gia.jd.com
 .gigachadlitics.b-cdn.net
 .gimg.baidu.com
 .gimp.zendesk.com
@@ -2959,7 +2946,6 @@
 .gz.apigw.tencentcs.com
 .h-adashx.ut.alibaba.com
 .h-adashx.ut.amap.com
-.h-adashx.ut.ele.me
 .h-adashx.ut.taobao.com
 .h-adashx.ut.uc.cn
 .h-adashx.ut.youku.com
@@ -3111,7 +3097,6 @@
 .images.ssbusiness.samsung.com
 .imagev2.tx.xmcdn.com
 .imapi-sg.isnssdk.com
-.imasdk.googleapis.com
 .imdns.hpplay.cn
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
@@ -3137,7 +3122,6 @@
 .info.3g.qq.com
 .info.analysis.kp.sec.miui.com
 .info.assets.reuters.com
-.info.pinyin.sogou.com
 .info.redhat.com
 .info.sec.miui.com
 .info.wps.cn
@@ -3332,7 +3316,6 @@
 .logtransform.hicloud.com
 .logwebs.kugou.com
 .logx.optimizely.com
-.loli.net
 .look-like-star.myshopify.com
 .lp.americas.business.samsung.com
 .lp.apac.business.samsung.com
@@ -3410,7 +3393,6 @@
 .mcs-sg.tiktok.com
 .mcs-va-useast2a.tiktokv.com
 .mcs-va.tiktokv.com
-.mcs.snssdk.com
 .mcs.us.tiktokv.com
 .mcs.zijieapi.com
 .mdevstat.qqlive.qq.com
@@ -3583,7 +3565,6 @@
 .newspush.sinajs.cn
 .newtest.wunderman-email.cjm.adobe.com
 .newton-api.ele.me
-.newvector.map.baidu.com
 .nex.163.com
 .nex.corp.163.com
 .nextdaymedia-ads.s3.amazonaws.com
@@ -3767,7 +3748,6 @@
 .pin.hpplay.cn
 .pindao.huoban.taobao.com
 .ping.acc.sogou.com
-.ping.pinyin.sogou.com
 .pingback.sogou.com
 .pingfore.qq.com
 .pinghot.qq.com
@@ -3940,7 +3920,6 @@
 .rescn.u3.ucweb.com
 .resolver.mi.xiaomi.com
 .resolver.msg.global.xiaomi.net
-.resolver.msg.xiaomi.net
 .retcode.alicdn.com
 .retcode.taobao.com
 .review.gdtimg.com
@@ -3996,7 +3975,6 @@
 .s3t3d2y8.afcdn.net
 .sa.api.intl.miui.com
 .sa.sina.cn
-.safebrowsing.googleapis.com
 .safebrowsing.urlsec.qq.com
 .sail-horizon.com
 .sam.msn.com
@@ -4058,7 +4036,6 @@
 .secure.diet.mayoclinic.org
 .secureflashplayerfeedback.adobe.com
 .securemetrics-z.v.aaplimg.com
-.securemetrics.apple.com
 .securemetrics.blackrock.com
 .securemvt.apple.com
 .security-lq.snssdk.com
@@ -4271,7 +4248,6 @@
 .survey.china.alibaba.com
 .susapi.lenovomm.com
 .suvset.sohu.com
-.sv.map.baidu.com
 .sw.mobile.sogou.com
 .swa.gtimg.com
 .swwwxww.oss-cn-hangzhou.aliyuncs.com
@@ -4316,7 +4292,6 @@
 .tci.oss-ap-southeast-1.aliyuncs.com
 .tcss.qq.com
 .tdc.qq.com
-.tdid.m.qq.com
 .tdrec.youku.com
 .techain.baidu.com
 .techhome-js.github.io
@@ -4634,7 +4609,6 @@
 .webstat.ws.126.net
 .webterren.com
 .weishi.baidu.com
-.wgo.mmstat.com
 .wh.ipaddress.com
 .whatif.fr.adobe.com
 .whatif.it.adobe.com
@@ -4665,7 +4639,6 @@
 .ws.progrss.yahoo.com
 .ws.sj.qq.com
 .wspeed.qq.com
-.wtradv.market.xiaomi.com
 .wwads.cn
 .wwis-dubc1-vip60.adobe.com
 .www-google-analytics.l.google.com
