--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-14 11:08:12
-# Total rules: 4999
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-14 12:44:16
+# Total rules: 5000
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -4869,6 +4869,7 @@ l2.l.qq.com
 l6urqh27.sina.cn
 launch.apple.com
 lb.l.qq.com
+lgtvsdp.com
 livec.l.qq.com
 livem.l.qq.com
 livep.l.qq.com
