--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,4 +1,4 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-14 12:57:41
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-14 22:36:41
 # Total rules: 5000
 
 .0a0d-d3l1vr.b-cdn.net
@@ -3523,7 +3523,6 @@
 .msmetrics.ws.sonos.com
 .msoftdl.360.cn
 .mssdk-sg.byteoversea.com
-.mssdk-sg.tiktok.com
 .mssdk-va.byteoversea.com
 .mssdk.bytedance.com
 .mssdk.volces.com
@@ -4847,6 +4846,7 @@ heyue.xiaomi.com
 hk.mibi.xiaomi.com
 hm.l.qq.com
 hm.xiaomi.com
+httpdns.browser.miui.com
 httpdns.volces.com
 huawei.facebook.com
 huichuan-mc.sm.cn
