--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-15 10:19:48
-# Total rules: 4999
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-15 11:40:50
+# Total rules: 5029
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -263,6 +263,7 @@
 .ads.xiaomi.com
 .ads.yahoo.com
 .ads.yap.yahoo.com
+.ads.yimg.com
 .ads.youtube.com
 .ads1.msn.com
 .ads2.msn.com
@@ -387,6 +388,7 @@
 .ai.m.taobao.com
 .ai.taobao.com
 .aic-ngfts.lge.com
+.ainu.intel.com
 .airlytics.airlock.twcmobile.weather.com
 .aixuntupian.oss-cn-hongkong.aliyuncs.com
 .aizhantj.com
@@ -567,6 +569,7 @@
 .asumi.shinobi.jp
 .atanx.alicdn.com
 .atanx2.alicdn.com
+.ati-a1.946d001b783803c1.xhst.bbci.co.uk
 .atlas-emui-drcn.hicloud.com
 .atm.youku.com
 .atom-log.3.cn
@@ -750,6 +753,7 @@
 .campaign-uploads.s3.amazonaws.com
 .campaign.adobe.com
 .cams.xvideos.com
+.cane.intel.com
 .capture.condenastdigital.com
 .carpe.pages.dev
 .carrick-ui.advoncommerce.com
@@ -882,6 +886,7 @@
 .config.uca.cloud.unity3d.com
 .configserver-dra.platform.hicloud.com
 .connatix.com
+.connect.intel.com
 .consent.economist.com
 .contentrecommend-out.mobile.sina.cn
 .contributions.guardianapis.com
@@ -2332,6 +2337,7 @@
 .derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .detwzgl8cvciv.cloudfront.net
+.dev-plan.intel.com
 .dev-push.m.youku.com
 .dev.email-signify.cjm.adobe.com
 .dev.visualwebsiteoptimizer.com
@@ -2495,6 +2501,7 @@
 .dodk8rb03jif9.cloudfront.net
 .dof9zd9l290mz.cloudfront.net
 .dog89nqcp3al4.cloudfront.net
+.dogo.intel.com
 .doh.dns.apple.com
 .doinntz6jwzoh.cloudfront.net
 .dojx47ab4dyxi.cloudfront.net
@@ -2680,6 +2687,7 @@
 .ecpm.tanx.com
 .ecsv2.roblox.com
 .edge.adobedc.net
+.edgecast-vod.yimg.com
 .eduad.baidu.com
 .eel.transistor.fm
 .ef-dongfeng.tanx.com
@@ -2692,6 +2700,9 @@
 .eloqua-trackings.unity3d.com
 .elq.blackrock.com
 .elq.redhat.com
+.elqtrk.intel.com
+.elqtrk.thailand.intel.com
+.elqtrkstg.intel.com
 .em.baidu.com
 .email.social.qualtrics.com
 .emdcadvertise.eastmoney.com
@@ -2899,6 +2910,7 @@
 .global-staticplat.cdn.bcebos.com
 .globalservices.conde.digital
 .gma.alicdn.com
+.gn-flagpoles.api.bbci.co.uk
 .gnar.grammarly.com
 .go.blackrock.com
 .go.mmstat.com
@@ -3063,6 +3075,7 @@
 .idm.bce.baidu.com
 .idstatus.sky.com
 .iebar.baidu.com
+.ieg.intel.com
 .ieonline.microsoft.com
 .ieonlinews.microsoft.com
 .ietheivaicai.com
@@ -3112,6 +3125,7 @@
 .impact.go.economist.com
 .improving.duckduckgo.com
 .imtt.qq.com
+.in.yimg.com
 .incoming-telemetry.thunderbird.net
 .indexww.com
 .indianetouristvisacoin.wordpress.com
@@ -3141,6 +3155,7 @@
 .inte.sogoucdn.com
 .inte.sohu.com
 .intellimizeio.com
+.intelpartneralliance.intel.com
 .interest.mix.sina.com.cn
 .intergient.com
 .internal-e.posthog.com
@@ -3162,6 +3177,7 @@
 .iyes.youku.com
 .j.br.baidu.com
 .j.wit.qq.com
+.jac.yahoosandbox.com
 .janapi.jd.com
 .jdsbyb.webmd.com
 .jiagu.360.cn
@@ -3538,6 +3554,7 @@
 .mxpl.9gag.com
 .mxpnl.com
 .my.chinaz.com
+.mybbc-analytics.files.bbci.co.uk
 .myes.youku.com
 .myhandshops.myshopify.com
 .n.3g.163.com
@@ -3849,6 +3866,7 @@
 .qchannel03.cn
 .qhl.bealge.sogou.com
 .qianclick.baidu.com
+.qos.video.yimg.com
 .qpb.sohu.com
 .qpb0.sohu.com
 .qpb1.sohu.com
@@ -3863,6 +3881,7 @@
 .qvid2.b-cdn.net
 .qzs.gdtimg.com
 .qzs.qq.com
+.r.bbci.co.uk
 .r.mail.163.com
 .r.msn.com
 .r.release.qq.com
@@ -3925,6 +3944,7 @@
 .rhaphaecelts.com
 .rich.qq.com
 .richmedia.video.qq.com
+.richmedia.yimg.com
 .river.zhidao.baidu.com
 .rj.baidu.com
 .rj.m.taobao.com
@@ -4039,6 +4059,7 @@
 .security-lq.snssdk.com
 .sedoparking.com
 .seedapp-creative.s3.amazonaws.com
+.seek.intel.com
 .segment-cdn.producthunt.com
 .segment.com
 .segment.io
@@ -4166,6 +4187,7 @@
 .staging.admin.e.mi.com
 .staging.ai.api.xiaomi.com
 .star-seo.oss-ap-northeast-1.aliyuncs.com
+.starget.intel.com
 .starkgame.zijieapi.com
 .stat.1688.com
 .stat.alibaba.com
@@ -4190,6 +4212,7 @@
 .static-doubleclick-net.l.google.com
 .static-tracking.klaviyo.com
 .static.2mdn.net
+.static.addtoany.com
 .static.alimama.com
 .static.ku6.com
 .static.map.bdimg.com
@@ -4202,6 +4225,7 @@
 .statis.push.netease.com
 .statistic.qzone.qq.com
 .statistics.mailerlite.com
+.stats.addtoany.com
 .stats.adobe.com
 .stats.autohome.com.cn
 .stats.blogger.com
@@ -4293,6 +4317,7 @@
 .tdrec.youku.com
 .techain.baidu.com
 .techhome-js.github.io
+.techprovider.intel.com
 .telegramweb.vercel.app
 .telemetrics.klaviyo.com
 .telemetry-coverage.mozilla.org
@@ -4323,6 +4348,7 @@
 .thind-gke-euw.prd.data.corp.unity3d.com
 .thtk.temu.com
 .tianqin.qq.com
+.tidy.intel.com
 .timejs.game.163.com
 .timon.zijieapi.com
 .tinglog.baidu.com
@@ -4508,6 +4534,7 @@
 .url1741.linktr.ee
 .urls.api.twitter.com
 .us-central1-markuphero.cloudfunctions.net
+.us.a1.yimg.com
 .usage.influxdata.com
 .usageanalytics.coveo.com
 .user1.game.qq.com
@@ -4599,6 +4626,7 @@
 .webc2s.pubgw.yahoo.com
 .webcast-ppx.snssdk.com
 .webcollects.kugou.com
+.webinar.intel.com
 .weblog.hankookilbo.com
 .webmetrics.mayoclinic.org
 .websdkmetrics.blackrock.com
@@ -4641,8 +4669,10 @@
 .wwis-dubc1-vip60.adobe.com
 .www-google-analytics.l.google.com
 .www-googletagmanager.l.google.com
+.www.addtoany.com
 .www.visualwebsiteoptimizer.com
 .www5.oss-cn-hangzhou.aliyuncs.com
+.www91.intel.com
 .wwwyoutube.com
 .wxaintpcos.wxqcloud.qq.com.cn
 .wxs.qq.com
