--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-15 11:40:50
-# Total rules: 5029
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-15 12:29:01
+# Total rules: 5030
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -3780,6 +3780,7 @@
 .pixel.byspotify.com
 .pixel.condenastdigital.com
 .pixel.facebook.com
+.pixel.ipinfo.io
 .pixel.reddit.com
 .pixel.spotify.com
 .pixel.wp.com
