--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-15 12:29:01
-# Total rules: 5030
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-15 18:24:55
+# Total rules: 5073
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -11,6 +11,7 @@
 .12551-1311572332.cos.ap-shanghai.myqcloud.com
 .13js1lbtbj3.sparkloop.app
 .1f506eaf.b-cdn.net
+.1oavsblobprodcus350.blob.core.windows.net
 .1wincdn.b-cdn.net
 .2016.sina.cn
 .2052.flash2-http.qq.com
@@ -22,6 +23,7 @@
 .31def833.b-cdn.net
 .33across.com
 .3426e3de.b-cdn.net
+.37bvsblobprodcus311.blob.core.windows.net
 .3dns-1.adobe.com
 .3dns-2.adobe.com
 .3dns-3.adobe.com
@@ -34,6 +36,7 @@
 .3site-rss.s3-ap-northeast-1.amazonaws.com
 .51.la
 .578297a5.b-cdn.net
+.66hao.cc
 .7ng6v3lu3c.execute-api.us-east-1.amazonaws.com
 .7q1z79gxsi.global.ssl.fastly.net
 .7xi9g1.com1.z0.glb.clouddn.com
@@ -117,6 +120,7 @@
 .ad.mobile.youku.com
 .ad.partner.gifshow.com
 .ad.player.baidu.com
+.ad.qn.img-space.com
 .ad.qq.com
 .ad.quickapp.hybrid.xiaomi.com
 .ad.qun.qq.com
@@ -433,6 +437,7 @@
 .analytics.bigdata.samsung.com
 .analytics.bloomberg.com
 .analytics.brave.com
+.analytics.chase.com
 .analytics.cloud.coveo.com
 .analytics.cloud.unity3d.com
 .analytics.cnblogs.com
@@ -456,6 +461,7 @@
 .analytics.spotify.com
 .analytics.techweb.com.cn
 .analytics.tiktok.com
+.analytics.tver.jp
 .analytics.twitter.com
 .analytics.uca.cloud.unity3d.com
 .analytics.unity3d.com
@@ -467,6 +473,7 @@
 .analytics.zhihu.com
 .analytics2-3-meride-tv.akamaized.net
 .analytics2-meride-tv.akamaized.net
+.analyticsehnwe.servicebus.windows.net
 .analyticsengine.s3.amazonaws.com
 .analyticshipaa.cloud.coveo.com
 .anapp.adobe.com
@@ -550,6 +557,7 @@
 .appmetrica.yandex.ru
 .appodeal.com
 .appointeeivyspongy.com
+.apps.nhk.jp
 .appsflyer.com
 .appsflyersdk.com
 .appsupport.qq.com
@@ -622,6 +630,7 @@
 .bats.video.yahoo.com
 .bazinga.mse.sogou.com
 .bbangads.b-cdn.net
+.bc.nhk.jp
 .bd.hd.sohu.com
 .bdplus.baidu.com
 .bds.snssdk.com
@@ -664,6 +673,7 @@
 .bodis.com
 .bole.shangshufang.ksosoft.com
 .books-analytics-events.apple.com
+.bootcss.com
 .bordeaux.futurecdn.net
 .boscdn.bpc.baidu.com
 .boxai-structured-data-slice-formal-1258344701.cos.ap-guangzhou.myqcloud.com
@@ -781,6 +791,8 @@
 .cdnweb3.pages.dev
 .cdp.cloud.unity3d.com
 .cert-test.sandbox.google.com
+.ceuswatcab01.blob.core.windows.net
+.ceuswatcab02.blob.core.windows.net
 .cevanu.ripley.com.pe.cdn.cloudflare.net
 .cfg.mse.sogou.com
 .cgi.connect.qq.com
@@ -792,6 +804,7 @@
 .chat1.jd.com
 .cheap-web-hosting-here.blogspot.com
 .cheap-xanax-here.blogspot.com
+.cheezwhiz.z9.web.core.windows.net
 .chimpstatic.com
 .choice.microsoft.com
 .cimage.adobe.com
@@ -834,6 +847,7 @@
 .cloudflareinsights.com
 .cloudfront-labs.amazonaws.com
 .cloudlogobox.com
+.cltgtstor001.blob.core.windows.net
 .cm.baidu.com
 .cm.bilibili.com
 .cm.jd.com
@@ -929,6 +943,7 @@
 .cre.dp.sina.cn
 .cre.mix.sina.com.cn
 .creative-klepon-3f0ecb.netlify.app
+.creative.stripchat.com
 .creatopy-adtag-production.b-cdn.net
 .creditsoffer.blogspot.com
 .criteo.com
@@ -2676,6 +2691,8 @@
 .e1.o.lencr.org
 .easytomessage.com
 .eatthiskok.b-cdn.net
+.eaus2watcab01.blob.core.windows.net
+.eaus2watcab02.blob.core.windows.net
 .ebxcdn.com
 .ec2-44-233-143-239.us-west-2.compute.amazonaws.com
 .eclick.baidu.com
@@ -2916,6 +2933,7 @@
 .go.mmstat.com
 .go.shop.app
 .go.sohu.com
+.go.stripchat.com
 .go.test.shop.app
 .go.zendesk.com
 .golden1.sogou.com
@@ -3144,6 +3162,7 @@
 .insight.ucweb.com
 .insights.algolia.io
 .insights.alibaba.com
+.insitez.blob.core.windows.net
 .install.kugou.com
 .install2.kugou.com
 .installer.xiaomi.com
@@ -3412,6 +3431,7 @@
 .mcs.zijieapi.com
 .mdevstat.qqlive.qq.com
 .mdt.qq.com
+.measure.chase.com
 .measure.office.com
 .medal.blog.csdn.net
 .media.globalsign.com
@@ -3433,7 +3453,9 @@
 .metrics.blackrock.com
 .metrics.bloomberg.com
 .metrics.brightcove.com
+.metrics.chase.com
 .metrics.cnn.com
+.metrics.doppiocdn.com
 .metrics.icloud.com
 .metrics.imdb.com
 .metrics.kapa.ai
@@ -3451,6 +3473,7 @@
 .mgzs.cdn.bcebos.com
 .miao.baidu.com
 .miaozhen.com
+.midas.chase.com
 .miehuo-img-1258238960.cos.ap-hongkong.myqcloud.com
 .migc.g.mi.com
 .migcreport.g.mi.com
@@ -3479,6 +3502,7 @@
 .mktg.act-on.com
 .ml314.com
 .mlog.search.xiaomi.net
+.mlpoo11-secondary.z13.web.core.windows.net
 .mm.jbzj.com
 .mm1.365dmp.com
 .mmgame.qpic.cn
@@ -3543,6 +3567,8 @@
 .mssdk.volces.com
 .mssdk.zijieapi.com
 .mta.qq.com
+.mtc.nhk.or.jp
+.mtcs.nhk.or.jp
 .mtga.setapp.com
 .mtj.baidu.com
 .mtrace.qq.com
@@ -3585,6 +3611,7 @@
 .nextdaymedia-ads.s3.amazonaws.com
 .nexus.officeapps.live.com
 .nexusrules.officeapps.live.com
+.nexxtv-events.servicebus.windows.net
 .nhtradecfg.eastmoney.com
 .ninja.akamaized.net
 .nitrous-analytics.s3.amazonaws.com
@@ -3664,6 +3691,7 @@
 .opoxv.com
 .opsdata.hicloud.com
 .optaim.com
+.optanon.blob.core.windows.net
 .optimize.google.com
 .optimus-ads.amap.com
 .orange-dc.youku.com
@@ -3708,6 +3736,7 @@
 .pagead-tpc.l.google.com
 .pagead.google.com
 .pagead.l.google.com
+.palmendeals.blob.core.windows.net
 .palmnews.sina.cn
 .pandora.mi.com
 .pandora.xiaomi.com
@@ -3759,6 +3788,7 @@
 .pglstatp-toutiao.com
 .pharmacy-news.blogspot.com
 .phs.tanx.com
+.pic.fengniao.com
 .pimlog.baidu.com
 .pin.hpplay.cn
 .pindao.huoban.taobao.com
@@ -4050,6 +4080,7 @@
 .search5-search-hl.ixigua.com
 .search5-search.ixigua.com
 .searchads.apple.com
+.searchstats.usa.gov
 .sec-cdn.static.xiaomi.net
 .sec.resource.xiaomi.net
 .secure.diet.mayoclinic.org
@@ -4115,6 +4146,7 @@
 .smetrics-ieeexplore.ieee.org
 .smetrics.accuweather.com
 .smetrics.afpjobs.amazon.com
+.smetrics.chase.com
 .smetrics.cnn.com
 .smetrics.digicert.com
 .smetrics.flex.amazon.com
@@ -4194,6 +4226,7 @@
 .stat.alibaba.com
 .stat.baike.com
 .stat.cnmo.com
+.stat.img-space.com
 .stat.ku6.com
 .stat.kugou.com
 .stat.m.360.cn
@@ -4221,6 +4254,7 @@
 .static.su.baidu.com
 .staticadm.leju.sina.com.cn
 .staticfile.net
+.staticfile.org
 .staticxx.facebook.com
 .statis.mobile.youku.com
 .statis.push.netease.com
@@ -4234,6 +4268,7 @@
 .stats.cnevids.com
 .stats.economist.com
 .stats.merriam-webster.com
+.stats.nhk.or.jp
 .stats.paypal.com
 .stats.shopify.com
 .stats.sparkloop.app
@@ -4306,7 +4341,9 @@
 .tapdaq-adverts.global.ssl.fastly.net
 .tapioni.com
 .target-us.samsung.com
+.target.chase.com
 .target.microsoft.com
+.targetemsecure.blob.core.windows.net
 .targetlr.adobe.com
 .tartannewzealand.myshopify.com
 .tattle.api.osano.com
@@ -4333,6 +4370,7 @@
 .temai.taobao.com
 .tempest.services.disqus.com
 .tempo-client-metric-prod.s3.amazonaws.com
+.tenmaxsgads.blob.core.windows.net
 .tepshared.tep.test.ajo.adobe.com
 .teredo.ipv6.microsoft.com
 .test-landing-page-122122.email-disney.cjm.adobe.com
@@ -4615,6 +4653,7 @@
 .watson.live.com
 .watson.microsoft.com
 .wax.weibo.com
+.wayfinderanalytics.servicebus.windows.net
 .wb.gtimg.com
 .wbapp.mobile.sina.cn
 .wbapp.uve.weibo.com
@@ -4636,6 +4675,8 @@
 .webstat.ws.126.net
 .webterren.com
 .weishi.baidu.com
+.weus2watcab01.blob.core.windows.net
+.weus2watcab02.blob.core.windows.net
 .wh.ipaddress.com
 .whatif.fr.adobe.com
 .whatif.it.adobe.com
@@ -4660,6 +4701,7 @@
 .wompanalytics.azurewebsites.net
 .woocall.sina.com.cn
 .woodpecker.uc.cn
+.worldmtcs.nhk.jp
 .worldwide.sogou.com
 .wpsweb-dc.wps.cn
 .wren.condenastdigital.com
@@ -4685,6 +4727,7 @@
 .x9.shinobi.jp
 .x9t7g4m2qk2.azurewebsites.net
 .xad.js.org
+.xblgdvrassets3010.blob.core.windows.net
 .xc.mydrivers.com
 .xdcs-collector.ximalaya.com
 .xdrig.com
