--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-15 18:36:53
-# Total rules: 5071
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-15 20:26:12
+# Total rules: 5072
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -2301,6 +2301,7 @@
 .dazu57wmpm14b.cloudfront.net
 .db033pq6bj64g.cloudfront.net
 .db4zl9wffwnmb.cloudfront.net
+.db7q4jg5rkhk8.cloudfront.net
 .dba9ytko5p72r.cloudfront.net
 .dbcdqp72lzmvj.cloudfront.net
 .dbfu2bd09j3ln.cloudfront.net
