--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-15 23:31:34
-# Total rules: 5072
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-16 08:47:26
+# Total rules: 5074
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -2573,6 +2573,7 @@
 .drpf-edt.proxima.nie.netease.com
 .drrcckbju3nd0.cloudfront.net
 .drulilqe8wg66.cloudfront.net
+.drvdb9rcebidk.cloudfront.net
 .ds02gfqy6io6i.cloudfront.net
 .ds88pc0kw6cvc.cloudfront.net
 .dsb6jelx4yhln.cloudfront.net
@@ -3417,6 +3418,7 @@
 .match.p4p.1688.com
 .matomo.openstreetmap.org
 .matwbp.iask.sina.com.cn
+.mauxyaeeefnrots.z21.web.core.windows.net
 .mazu.3g.qq.com
 .mazu.m.qq.com
 .mazu.sec.miui.com
