--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-16 08:47:26
-# Total rules: 5074
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-16 10:49:13
+# Total rules: 5078
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -305,6 +305,8 @@
 .adsfile.qq.com
 .adsfilebssdlbig.ali.kugou.com
 .adsfileretry.service.kugou.com
+.adsfs-sdkconfig.heytapimage.com
+.adsfs.heytapimage.com
 .adsgroup.qq.com
 .adshmct.qq.com
 .adshmmsg.qq.com
@@ -2391,6 +2393,7 @@
 .dh0uktvqfaomb.cloudfront.net
 .dh6dm31izb875.cloudfront.net
 .dhcmni6m2kkyw.cloudfront.net
+.dhfs.heytapimage.com
 .dhpikd1t89arn.cloudfront.net
 .dhrhzii89gpwo.cloudfront.net
 .dhzws7l31cq8p.cloudfront.net
@@ -3130,6 +3133,7 @@
 .imagev2.tx.xmcdn.com
 .imapi-sg.isnssdk.com
 .imdns.hpplay.cn
+.img-c.heytapimage.com
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
 .img.alibaba.com
