--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-16 10:49:13
-# Total rules: 5078
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-16 14:28:20
+# Total rules: 5081
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -3255,6 +3255,7 @@
 .kwurl.ucweb.com
 .kyson.kakao.com
 .l.qq.com
+.l.ykimg.com
 .l.youku.com
 .landing.ultimate-success-emea.test.ajo.adobe.com
 .landingpage.emaillpb.adobe.com
@@ -3711,6 +3712,7 @@
 .oth.eve.qq.com
 .otpercpiheno.blogspot.com
 .outlookads.live.com
+.p-log.ykimg.com
 .p.alimama.com
 .p.controld.com
 .p.hentaiforce.net
@@ -4246,6 +4248,7 @@
 .stat.ws.126.net
 .stat.xiaomi.com
 .stat.y.qq.com
+.stat.ykimg.com
 .stat.youku.com
 .stat.youpin.mi.com
 .static-addtoany-com.cdn.ampproject.org
