--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-16 14:28:20
-# Total rules: 5081
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-16 21:08:26
+# Total rules: 5084
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -41,6 +41,7 @@
 .7q1z79gxsi.global.ssl.fastly.net
 .7xi9g1.com1.z0.glb.clouddn.com
 .7xsf3h.com1.z0.glb.clouddn.com
+.87104801.b-cdn.net
 .87fa4b7e.b-cdn.net
 .888.tv.sohu.com
 .91116e9f.b-cdn.net
@@ -1185,6 +1186,7 @@
 .d1ha41wacubcnb.cloudfront.net
 .d1hfbz0n5yb6ym.cloudfront.net
 .d1hgdmbgioknig.cloudfront.net
+.d1hh76tqcottqz.cloudfront.net
 .d1hl7ya5ggieq0.cloudfront.net
 .d1hm0uxglt4t41.cloudfront.net
 .d1hnmxbg6rp2o6.cloudfront.net
@@ -1472,6 +1474,7 @@
 .d24g87zbxr4yiz.cloudfront.net
 .d24iusj27nm1rd.cloudfront.net
 .d24lwiav9pbaw7.cloudfront.net
+.d24qbn28utpewb.cloudfront.net
 .d24rtvkqjwgutp.cloudfront.net
 .d25dfknw9ghxs6.cloudfront.net
 .d25m254rjp3rii.cloudfront.net
