--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-16 21:08:26
-# Total rules: 5084
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-17 09:20:59
+# Total rules: 5088
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -449,6 +449,7 @@
 .analytics.google.com
 .analytics.googleapis.com
 .analytics.hz.netease.com
+.analytics.icons8.com
 .analytics.live.com
 .analytics.map.qq.com
 .analytics.meituan.net
@@ -933,6 +934,7 @@
 .cpu-admin.baidu.com
 .cpu.baidu.com
 .cpucdn.baidu.com
+.cpux.gmud.top
 .cr.adsappier.com
 .crab.baidu.com
 .crash.163.com
@@ -2475,6 +2477,7 @@
 .dm0acvguygm9h.cloudfront.net
 .dm0ly9ibqkdxn.cloudfront.net
 .dm0t14ck8pg86.cloudfront.net
+.dm50eugvywuiu.cloudfront.net
 .dm62uysn32ppt.cloudfront.net
 .dm7gsepi27zsx.cloudfront.net
 .dm7ii62qkhy9z.cloudfront.net
@@ -2843,6 +2846,7 @@
 .fodder.qq.com
 .fodder.tc.qq.com
 .folkrbvi.pages.dev
+.fonts.googleapis.com
 .forex-trading-benefits.blogspot.com
 .forms-emea.lenovo.com
 .forms.lenovo.com
